# todo

./: Makefile  README.md  docker-compose.yml  init-db.sql
backend/: Dockerfile  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  trivial.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/components/: ClientProvider.tsx  LoginForm.tsx  Navbar.tsx  Task.tsx  TaskForm.tsx  TaskList.tsx
frontend/app/context/: UserContext.tsx
frontend/app/pricing/: page.tsx
frontend/src/: types.ts
frontend/src/app/: layout.tsx  metadata.ts  page.tsx
frontend/src/app/components/: AppContent.tsx  GoogleLogin.tsx  GoogleOAuthProviderWrapper.tsx  Navbar.tsx  TaskList.tsx
frontend/src/app/context/: UserContext.tsx
frontend/src/app/contexts/: AuthContext.tsx
frontend/src/app/hooks/: useEnvCheck.ts
frontend/src/app/pages/: _app.tsx  admin.tsx  index.tsx
